# secret_santa/openapi/openapi.yaml
@@ -31,7 +31,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Participation'
+                $ref: '#/components/schemas/participation'
         "404":
           description: Participant not found
           content: {}
@@ -52,15 +52,15 @@ paths:
           type: string
           format: uuid
       requestBody:
-        description: Participation details
+        description: participation details
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Participation'
+              $ref: '#/components/schemas/participation'
         required: true
       responses:
         "400":
-          description: Invalid ID supplied
+          description: Invalid request
           content: {}
         "404":
           description: Participant not found
@@ -70,7 +70,7 @@ paths:
     get:
       tags:
       - wichtel
-      summary: Returns the participat details
+      summary: Returns the participant details
       operationId: get_participant_details
       parameters:
       - name: participantId
@@ -95,7 +95,7 @@ paths:
       x-openapi-router-controller: secret_santa.controllers.wichtel_controller
 components:
   schemas:
-    Participation:
+    participation:
       type: object
       properties:
         participating:
